--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon --exec electron main.js"
   },
   "dependencies": {
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "socket.io-client": "^4.8.1"
   }
 }
