--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "electron": "^36.1.0",
+    "electron-builder": "^26.0.12",
     "nodemon": "^3.1.10"
   },
   "scripts": {
