--- a/package.json
+++ b/package.json
@@ -1,11 +1,47 @@
 {
+  "name": "magverse",
+  "version": "1.0.0",
+  "description": "A powerful desktop app that turns a single line of story idea ✍️ into a full story video 📽️",
+  "main": "main.js",
+  "author": {
+    "name": "Hammad Rafique",
+    "email": "hammadrafique029@gmail.com"
+  },
+  "homepage": "https://github.com/HammadRafique29/Magverse",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HammadRafique29/Magverse.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HammadRafique29/Magverse/issues"
+  },
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon --exec electron main.js",
+    "build": "electron-builder"
+  },
+  "build": {
+    "appId": "com.magverse.myapp",
+    "productName": "Magverse",
+    "copyright": "Copyright © 2025 Hammad Rafique",
+    "files": [
+      "**/*"
+    ],
+    "directories": {
+      "buildResources": "assets",
+      "output": "dist"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
+    }
+  },
   "devDependencies": {
     "electron": "^36.1.0",
     "electron-builder": "^26.0.12",
     "nodemon": "^3.1.10"
-  },
-  "scripts": {
-    "start": "nodemon --exec electron main.js"
   },
   "dependencies": {
     "axios": "^1.9.0",
