--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
       "output": "dist"
     },
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "icon.ico"
     },
     "linux": {
       "target": "AppImage"
